# wiim-scrobbler

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-05-17-installer-config-wizard.md
docs/superpowers/specs/: 2026-05-17-installer-config-wizard-design.md
packaging/: cli_entry.py  tray_entry.py  wiim-scrobbler.iss  wiim-scrobbler.spec
scripts/: build_windows.ps1  install_startup.ps1  uninstall_startup.ps1
src/wiim_lastfm/: __init__.py  cli.py  config.py  lastfm.py  models.py  runner.py  scrobbler.py  single_instance.py  state.py  tray.py  upnp.py  wiim.py
tests/: test_cli.py  test_config_paths.py  test_lastfm.py  test_packaging.py  test_runner.py  test_scrobbler.py  test_single_instance.py  test_startup_script.py  test_state.py  test_tray.py  test_upnp.py  test_wiim.py
