[project]
name = "wiim-lastfm"
version = "0.1.0"
description = "Command-line Last.fm scrobbler for WiiM devices"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
wiim-lastfm = "wiim_lastfm.cli:main"
wiim-lastfm-tray = "wiim_lastfm.tray:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
